--- a/vite-project/src/components/Layout/Header/Header.scss
+++ b/vite-project/src/components/Layout/Header/Header.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $primary-color;
+  background-color: $secondary-color;
 
   .home-icon {
     margin-left: 30px;
