--- a/vite-project/design-system/styles/index.scss
+++ b/vite-project/design-system/styles/index.scss
@@ -32,7 +32,7 @@ p:hover {
 
 button {
   background-color: var(--highlight-color-2);
-  color: var(--default-text-color);
+  color: var(--secondary-text-color);
   border: none;
   padding: 10px 20px;
   cursor: pointer;
