--- a/vite-project/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/vite-project/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -2,7 +2,7 @@
 
 .theme-switcher button.active {
   background-color: var(--highlight-color-3);
-  color: var(--default-text-color);
+  color: var(--secondary-text-color-dark);
 }
 
 .theme-switcher {
@@ -13,7 +13,7 @@
 .theme-switcher button {
   padding: 8px 16px;
   background-color: var(--highlight-color-2);
-  color: var(--default-text-color);
+  color: var(--secondary-text-color-light);
   border: none;
   border-radius: 4px;
   cursor: pointer;
