Allow adding themes

--- a/vite-project/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/vite-project/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -23,4 +23,5 @@
 .theme-switcher button.active,
 .theme-switcher button:hover {
   background-color: var(--highlight-color-3);
+  color: var(--secondary-text-color-dark);
 }
